tests/scripts/type_errors/cannot_assign.roto
enum Foo {
    Bar
}

fn main() {
    Foo.Bar = 10;
}
